<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#2e0b06"
    android:layout_width="350dp"
    android:layout_height="450dp">
    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_bleeding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="user.admin.com.firstaid.MuscleFracture">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First Aid for Fracture"
                android:textColor="#fff"
                android:textSize="32sp"
                android:layout_marginTop="16dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/fracture1"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/fracture2"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/fracture3"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/fracture4"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/fracture5"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/fracture6"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"/>

</LinearLayout>
        </ScrollView>
    </LinearLayout>