<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#dcdcdc"
    android:layout_width="350dp"
    android:layout_height="450dp">
    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_bleeding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="user.admin.com.firstaid.Sprain">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First Aid For Sprain"
                android:textColor="#000"
                android:textSize="32sp"
                android:layout_marginTop="16dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/sprain1"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/sprain2"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/sprain3"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/sprain4"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/sprain5"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
