<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#1a110a"
    android:layout_width="350dp"
    android:layout_height="450dp">
    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_burn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="user.admin.com.firstaid.Hypothermia">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First Aid for Hypothermia"
                android:textSize="32sp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/hypothermia1"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/hypothermia2"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/hypothermia3"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/hypothermia4"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/hypothermia5"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>